--- a/skin.css
+++ b/skin.css
@@ -1,6 +1,6 @@
 body {
     color: #868ba1;
-    background-color: #e9ecef;
+    background-color: #0079bf;
     font-family: "Roboto", "Helvetica Neue", Arial, sans-s
 }
 
@@ -12,6 +12,56 @@ header {
     margin: 0 !important;
     border: 0 !important;
     background-color : #3B6998 !important;
+}
+
+#board-container{
+    background-color:rgb(0, 121, 191);
+}
+
+#board-container table th{
+    padding: 0px 8px 0px 0px;
+    border: 0px solid #eee;
+    background: none;
+}
+
+#board-container table th:first-child{
+    padding-left:8px;
+}
+
+#board-container table td{
+    padding-top:0px;
+}
+
+#board{
+    margin-top:10px;
+}
+
+#board-container table th .board-column-expanded{
+    background-color: #ebecf0;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    padding:10px 0px;
+}
+
+#board-container table th{
+    font-size:14px;
+}
+
+#board-container .board-add-icon{
+    float:right;
+    padding-right:11px;
+}
+
+#board-container .board-column-title{
+    padding-left:17px;
+}
+
+#board-container .board-add-icon i{
+    font-size:1em;
+}
+
+#board-container table td{
+    border:0px;
 }
 
 .action-menu {
@@ -31,6 +81,11 @@ header {
     margin-right: 5px;
     float: left;
     line-height: 30px;
+}
+
+.project-header{
+    background: #ebecf0;
+    padding-bottom: 6px;
 }
 
 header h1 {
@@ -248,6 +303,49 @@ table.table-fixed th, table.table-fixed td {
 
 .board-add-icon i {
 	color: #3B6998;
+}
+
+#board-container th .board-column-header-task-count{
+    font-size:11px;
+}
+
+.board-task-list{
+    overflow-y: auto;
+    background-color: #ebecf0;
+    min-height: 100% !important;
+    padding: 2px 8px 0px;
+    margin: 5px;
+    margin-top: 0px;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+
+#board-container td .board-task-list{
+    margin-left:0px;
+}
+
+#board-container td{
+    padding-left:0px;
+}
+
+#board-container td:first-child{
+    padding-left:8px;
+}
+
+.board-task-list .task-board, .board-task-list .task-board.color-blue{
+    background-color: #fff;
+    border: 0px;
+    padding: 6px 8px 2px;
+    position: relative;
+    border-radius: 3px;
+    box-shadow: 0 1px 0 rgba(9,30,66,.25);
+    cursor: pointer;
+    display: block;
+    margin-bottom: 8px;
+}
+
+.board-task-list .task-board:last-child{
+    margin-bottom:8px;
 }
 
 
