fixed form registration style

--- a/skin.css
+++ b/skin.css
@@ -65,15 +65,15 @@ header {
 }
 
 .action-menu {
-	padding: 10px;
+    padding: 10px;
 }
 
 .views {
-	line-height: 30px;
+    line-height: 30px;
 }
 
 .filter-box-component {
-	padding-top: 5px;
+    padding-top: 5px;
 }
 
 .project-header .dropdown-component {
@@ -116,27 +116,27 @@ header h1 {
 
 label {
     padding: 0px 40px 0 0px;
-	line-height: 25px;
+    line-height: 25px;
     vertical-align: middle;
     font-size: .9rem;
 }
 
 /*
-	form {
+    form {
     margin-top: 40px;
 }
 */
 
 fieldset {
-	background: #ffffff;
+    background: #ffffff;
 }
 
 select, span.select2 {
-	width: 95% !important;
+    width: 95% !important;
 }
 
 input[type="number"], input[type="date"], input[type="email"], input[type="password"], input[type="text"]:not(.input-addon-field) {
-	padding: 0.65rem 0.75rem;
+    padding: 0.65rem 0.75rem;
     font-size: 0.875rem;
     line-height: 1.25;
     color: #495057;
@@ -150,11 +150,11 @@ input[type="number"], input[type="date"], input[type="email"], input[type="passw
 }
 
 .select-dropdown-input {
-	border: none !important;
+    border: none !important;
 }
 
 .select-dropdown-input-container .select-dropdown-chevron {
-	top: 10px;
+    top: 10px;
 }
 
 .js-submit-buttons-rendered {
@@ -307,7 +307,7 @@ table.table-fixed th, table.table-fixed td {
 }
 
 .board-add-icon i {
-	color: #3B6998;
+    color: #3B6998;
 }
 
 #board-container th .board-column-header-task-count{
@@ -355,11 +355,19 @@ table.table-fixed th, table.table-fixed td {
 
 
 @media (max-width: 768px) {
-	.sidebar {
-	max-width: 100%;
-	}
+    .sidebar {
+       max-width: 100%;
+    }
 }
 
 .form-login{
+    color:#ffffff;
+}
+
+.form-login fieldset{
+    background:none;
+}
+
+.form-login .page-header h2{
     color:#ffffff;
 }
